package.json: Replace str-copy.c with clibs/strdup

--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   ],
   "dependencies": {
     "stephenmathieson/path-normalize.c": "*",
-    "stephenmathieson/str-copy.c": "*"
+    "strdup": "0.0.0"
   }
 }
